...
              </AlertDialogFooter>
            </AlertDialogContent>
          </AlertDialog>

          <FormControl className="p-4 border border-outline-200 rounded-lg w-full mb-6">
            <Heading className="text-typography-100" size="lg">
              Authentication
            </Heading>
            <VStack className="gap-4">
              <VStack space="lg">
                <Text className="text-typography-100">Email</Text>

                <Input className={inputClassName}>
                  <InputField
                    accessibilityLabel="email input field"
                    testID={automationLocatorsDataState.loginScreen.emailInput}
                    type="text"
                    placeholder="Enter your email"
                    className="text-typography-100"
                    value={email}
                    onChangeText={setEmail}
                    editable={!isLoading}
                    autoCapitalize="none"
                    keyboardType="email-address"
...
              <VStack space="lg">
                <Text className="text-typography-100">Password</Text>
                <Input className={inputClassName}>
                  <InputField
                    testID={automationLocatorsDataState.loginScreen.passwordInput}
                    accessibilityLabel="password input field"
                    placeholder="Enter your password"
                    type={showPassword ? 'text' : 'password'}
                    className="text-typography-100"
                    value={password}
                    onChangeText={setPassword}
                    editable={!isLoading}
                    secureTextEntry={!showPassword}
...
                  testID={automationLocatorsDataState.loginScreen.signInButton}
                  className="p-0"
                  size="xl"
                  onPress={signInAsync}
                  disabled={isLoading}
                >
                  <ButtonText>{isLoading ? 'Loading...' : 'Login'}</ButtonText>
                </Button>
              </VStack>
              <Divider className="my-0.5 mb-4" />
              <VStack>
                <Button
                  testID={automationLocatorsDataState.loginScreen.registerButton}
...
