appId: com.phuocng23000.sdchat
---
- launchApp
- extendedWaitUntil:
    visible: "Chat.*"
    timeout: 50000
- assertVisible: ".*Settings"
- tapOn: "Settings"
- assertVisible: "Edit"
- tapOn: "Edit"
- assertVisible: "Change Display Name"
- tapOn: "Input Field"
- repeat:
    times: 12
    commands:
      - pressKey: backspace
- inputRandomCityName
- tapOn: "Save"
- assertVisible: "Profile updated successfully"
- assertNotVisible: "Profile updated successfully"