appId: com.phuocng23000.sdchat
---

- assertVisible: "PASSWORD"
- assertVisible: "••••••••"
- assertVisible: "Change"
- tapOn: "Change"
- assertVisible: "Change Password"
- tapOn: "New Password"
- inputText: ${MAESTRO_PASSWORD}
- tapOn: "Confirm Password"
- inputText: ${MAESTRO_PASSWORD}
- tapOn: "Update"
- assertVisible: "Password updated successfully"
- assertNotVisible: "Password updated successfully"

- tapOn: "Sign Out"
# Login again to confirm the new password
- assertVisible: "Email"
- assertVisible: "Password"
- tapOn: "Enter your email"
- inputText: ${MAESTRO_EMAIL}
- tapOn: "Enter your password"
- inputText: ${MAESTRO_PASSWORD}
- tapOn: "Login"
- assertVisible: "Chat.*"