appId: com.phuocng23000.sdchat
---
- launchApp

- assertVisible: "Settings"
- tapOn: "Settings"
- assertVisible: "Key Management"
- assertVisible: "Dark Mode.*"
- assertVisible: { id: "assert-light-mode" }
- takeScreenshot: "value"
- tapOn: { id: "dark-mode-switch" }
- assertVisible: { id: "assert-dark-mode" }
- takeScreenshot: "value"
- tapOn: { id: "dark-mode-switch" }
- assertVisible: { id: "assert-light-mode" }